# ai_devs

./: .gitignore  AGENTS.md  CHANGES.md  IMPLEMENTATION_SUMMARY.md  PLAN.md  main.py  pyproject.toml  temp_func.py  test_agent_contract.py  test_agent_o.py  test_agent_o_new.py  test_ngrok.py  test_reflection.py  test_s02e03_tools.py  test_session_manager.py  test_timeout_optimizations.py
notebooks/: ascii.ipynb
outputs/: s01e02_debug.db
src/ai_devs_core/: __init__.py  agent.py  ai_devs_client.py  config.py  harness.py  job_client.py  job_client_test.py  memory.py  memory_test.py  session.py  utils.py
src/lessons/: __init__.py  s01e01.ipynb  s01e01.py  s01e02.py  s01e02_map.ipynb
src/lessons/s01e01/: __init__.py  main.py
src/lessons/s01e02/: __init__.py  main.py
src/lessons/s01e03/: __init__.py  main.py  models.py  package_api.py  prompts.py  requirements.txt  server.py  session_manager.py
src/lessons/s01e04/: main.py
src/lessons/s01e05/: main.py
src/lessons/s02e01/: main.py
src/lessons/s02e02/: __init__.py  main.py
src/lessons/s02e03/: bonus_test.py  main.py
src/lessons/s02e04/: __init__.py  main.py
src/mcp/: compose.yml
src/mcp/files/: main.py  pyproject.toml
src/mcp/image/: Dockerfile  main.py  pyproject.toml
src/mcp/string/: Dockerfile  main.py  pyproject.toml
