[project]
name = "ai-devs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langfuse>=4.0.1",
    "loguru>=0.7.3",
    "mistralai>=2.1.0",
    "pandas>=3.0.1",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.7",
    "typer>=0.24.1",
    "folium>=0.19.0",
    "jupyter>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

