[project]
name = "ai-devs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langfuse>=4.0.1",
    "loguru>=0.7.3",
    "mistralai>=2.1.0",
    "pandas>=3.0.1",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.7",
    "typer>=0.24.1",
    "folium>=0.19.0",
    "jupyter>=1.1.1",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "requests>=2.32.5",
    "ngrok>=1.7.0",
    "openai>=1.40.0",
    "openrouter>=0.8.1",
    "fastmcp>=3.2.4",
    "prompt-toolkit>=3.0.52",
    "rich>=14.3.3",
    "duckdb>=1.5.2",
    "mistral-common>=1.11.0",
    "sentencepiece>=0.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv.workspace]
members = [
    "src/mcp/files",
]

