[project]
name = "ai-devs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langfuse>=4.0.1",
    "loguru>=0.7.3",
    "pandas>=3.0.1",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.7",
    "typer>=0.24.1",
    "jupyter>=1.1.1",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "requests>=2.32.5",
    "ngrok>=1.7.0",
    "openai>=1.40.0",
    "openrouter>=0.8.1",
    "fastmcp>=3.2.4",
    "rich>=14.3.3",
    "duckdb>=1.5.2",
    "tiktoken>=0.12.0",
    "opencv-python>=4.13.0.92",
    "mistralai>=2.4.2",
    "mistral-common>=1.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ty>=0.0.32",
]

[tool.uv.workspace]
members = [
    "src/mcp/files",
]

